# jast

./: .pre-commit-hooks.yaml  LICENSE.txt  README.md  pyproject.toml
src/jast/: __about__.py  __init__.py  cli.py  config.py  jamf_client.py  local.py  schema.py  scripts.py
src/jast/hooks/: .pre-commit-config.yaml  hooks.py  pre-push  pre-push.sh
